Made changes to home page and added APIs

--- a/FrontEnd/ValedictorianFE/HTML/login_reg.html
+++ b/FrontEnd/ValedictorianFE/HTML/login_reg.html
@@ -36,13 +36,13 @@
             <div class="toggle-container">
                 <div class="toggle">
                     <div class="toggle-panel toggle-left">
-                        <h1>Welcome Back!</h1>
-                        <p>Enter your personal details to use all of site features</p>
+                        <h1>HELLO!</h1>
+                        <p>Lets create an account for you.</p>
                         <button class="hidden" id="login">Sign In</button>
                     </div>
                     <div class="toggle-panel toggle-right">
-                        <h1>Hello, Bitch!</h1>
-                        <p>Register with your personal details to use all of site features</p>
+                        <h1>WELCOME BACK!</h1>
+                        <p>Its great to see you again. We've been waiting ;)</p>
                         <button class="hidden" id="register">Sign Up</button>
                     </div>
                 </div>
