--- a/FrontEnd/ValedictorianFE/HTML/login_reg.html
+++ b/FrontEnd/ValedictorianFE/HTML/login_reg.html
@@ -8,6 +8,13 @@
         <title>Login Page</title>
     </head>
     <body>
+
+        <div class="wrapper">
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+        </div>
+
         <div class="container" id="container">
             <div class="form-container sign-up">
                 <form id="register-form">
