Added profile/notif APIs
Added APIs for functions on home page(notifications) and profile page(editing profie)

--- a/FrontEnd/ValedictorianFE/HTML/Home.html
+++ b/FrontEnd/ValedictorianFE/HTML/Home.html
@@ -137,7 +137,7 @@
 
         </section>
         
-        <script src="../JS/home.js"></script>
+        <script type="module" src="../JS/home.js"></script>
         <script src="../JS/calendar.js"></script>
         <script src="../JS/renderer.js"></script>
 
