Claritas Topics page created
Claritas Topics page created with its basic elements, uses topic.html and topic.css

--- a/FrontEnd/ValedictorianFE/HTML/module.html
+++ b/FrontEnd/ValedictorianFE/HTML/module.html
@@ -9,6 +9,7 @@
 <body>
 <header>
     <h1>Modules:</h1>
+    <!--Using div's instead of semantic elements here to allow for more js aspects later, also will probably not have to read this content out to deaf stuents-->
 </header>
 
 <div class="module-navigation">
