insideTopic.html and insideTopic.css created
basic version of insideTopic.html and insideTopic.css created, styling still needs to be corrected

--- a/FrontEnd/ValedictorianFE/HTML/topic.html
+++ b/FrontEnd/ValedictorianFE/HTML/topic.html
@@ -9,8 +9,8 @@
 
 <body>
     <h1>Claritas</h1>
-    <section class="All-Topics">
-
+    <!--<section class="All-Topics">-->
+<section class="set1Topics">
 
 <aside class="Column1">
     <h4>LPR281</h4>
@@ -52,7 +52,9 @@
 <article>Discussion Topic 3:</article>
 <article>Discussion Topic 4:</article>
 </aside>
+</section>
 
+<section class="set2Topics">
 <aside class="Column6">
     <h4>PRJ381</h4>
 <article>Discussion Topic 1:</article>
@@ -92,7 +94,8 @@
 <article>Discussion Topic 3:</article>
 <article>Discussion Topic 4:</article>
 </aside>
-    </section>
+</section>
+   <!--</section>--> 
 
 
 
