--- a/FrontEnd/ValedictorianFE/HTML/module.html
+++ b/FrontEnd/ValedictorianFE/HTML/module.html
@@ -1,177 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Upload Learning Material</title>
-  <style>
-    /* General Layout */
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #e3f2fd, #bbdefb);
-      margin: 0;
-      padding: 40px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-    }
-
-    h1 {
-      color: #1a237e;
-      font-weight: 600;
-      margin-bottom: 20px;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.1);
-    }
-
-    /* Upload Box */
-    .upload-box {
-      background: white;
-      padding: 25px 40px;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: all 0.3s ease;
-    }
-
-    .upload-box:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-    }
-
-    input[type="file"] {
-      display: none;
-    }
-
-    label {
-      background-color: #3949ab;
-      color: white;
-      padding: 12px 25px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-weight: 500;
-      transition: 0.3s;
-    }
-
-    label:hover {
-      background-color: #283593;
-    }
-
-    /* PDF Viewer Card */
-    .pdf-card {
-      background: white;
-      margin-top: 30px;
-      padding: 10px;
-      width: 80%;
-      height: 80vh;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
-      overflow: hidden;
-    }
-
-    iframe {
-      flex-grow: 1;
-      width: 100%;
-      border: none;
-      border-radius: 10px;
-    }
-
-    /* Controls */
-    .controls {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      padding: 10px;
-      background-color: #f5f5f5;
-      border-radius: 10px;
-    }
-
-    .controls button {
-      background-color: #1e88e5;
-      border: none;
-      color: white;
-      padding: 8px 16px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: 500;
-      transition: background 0.3s;
-    }
-
-    .controls button:hover {
-      background-color: #1565c0;
-    }
-
-    .controls button:disabled {
-      background-color: #9e9e9e;
-      cursor: not-allowed;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SEN 381 Course Content</title>
+    <link rel="stylesheet" href="../CSS/module.css">
 </head>
 <body>
-  <h1>Upload Learning Material</h1>
+    <div class="container">
+        <nav class="sidebar">
+            <div class="menu-heading">MENU</div>
+            <ul>
+                <li><a href="#">Offline</a></li>
+                <li class="selected"><a href="#">COURSE CONTENT</a></li>
+                <li><a href="#">UPLOADS</a></li>
+                <li><a href="#">CONTACT</a></li>
+            </ul>
+        </nav>
 
-  <!-- Upload Box -->
-  <div class="upload-box">
-    <label for="pdfUpload">Upload PDF</label>
-    <input type="file" id="pdfUpload" accept="application/pdf">
-  </div>
+        <main class="content-area">
+            <header>
+                <h1>SEN 381</h1>
+                <p>SEN 381 is a 3rd year course taken at BC ITversity.</p>
+            </header>
 
-  <!-- PDF Display Card -->
-  <div class="pdf-card">
-    <div class="controls">
-      <button id="zoomIn" disabled>Zoom In (+)</button>
-      <button id="zoomOut" disabled>Zoom Out (-)</button>
-      <button id="downloadBtn" disabled>Download</button>
+            <section class="tab-content">
+                <h2>Title of Tab Selected</h2>
+                <p>Description of Tab Item selected.</p>
+                <div class="content-description">
+                    selected tab Content made viewable area
+                </div>
+                <hr>
+
+                <h3>Upload Content:</h3>
+                <div class="upload-section">
+                    <input type="file" id="pdfFile" accept="application/pdf" style="display: none;">
+                    <button id="uploadPdfBtn" class="upload-btn">Upload PDF</button>
+                </div>
+
+                <div class="pdf-viewer-controls">
+                    <button id="zoomInBtn" disabled>Zoom In (+)</button>
+                    <button id="zoomOutBtn" disabled>Zoom Out (-)</button>
+                    <button id="downloadBtn" disabled>Download</button>
+                </div>
+
+                <div class="pdf-display-box">
+                    <embed id="pdfDisplay" src="" type="application/pdf" style="width: 100%; height: 100%; display: none;">
+                    <iframe id="pdfDisplayIframe" src="" style="width: 100%; height: 100%; border: none; display: none;"></iframe>
+                </div>
+            </section>
+        </main>
     </div>
-    <iframe id="pdfViewer"></iframe>
-  </div>
 
-  <script>
-    const pdfUpload = document.getElementById('pdfUpload');
-    const pdfViewer = document.getElementById('pdfViewer');
-    const zoomIn = document.getElementById('zoomIn');
-    const zoomOut = document.getElementById('zoomOut');
-    const downloadBtn = document.getElementById('downloadBtn');
-
-    let zoomLevel = 1;
-    let currentFileURL = '';
-
-    pdfUpload.addEventListener('change', () => {
-      const file = pdfUpload.files[0];
-      if (file && file.type === 'application/pdf') {
-        currentFileURL = URL.createObjectURL(file);
-        pdfViewer.src = currentFileURL;
-        zoomIn.disabled = false;
-        zoomOut.disabled = false;
-        downloadBtn.disabled = false;
-      } else {
-        alert('Please upload a valid PDF file.');
-      }
-    });
-
-    zoomIn.addEventListener('click', () => {
-      zoomLevel += 0.1;
-      pdfViewer.style.transform = `scale(${zoomLevel})`;
-      pdfViewer.style.transformOrigin = 'top';
-    });
-
-    zoomOut.addEventListener('click', () => {
-      if (zoomLevel > 0.5) {
-        zoomLevel -= 0.1;
-        pdfViewer.style.transform = `scale(${zoomLevel})`;
-      }
-    });
-
-    downloadBtn.addEventListener('click', () => {
-      if (currentFileURL) {
-        const link = document.createElement('a');
-        link.href = currentFileURL;
-        link.download = pdfUpload.files[0].name;
-        link.click();
-      }
-    });
-  </script>
+    <script src="../JS/module.js"></script>
 </body>
 </html>
