--- a/FrontEnd/ValedictorianFE/HTML/Home.html
+++ b/FrontEnd/ValedictorianFE/HTML/Home.html
@@ -184,6 +184,7 @@
         <script src="../JS/calendar.js"></script>
         <script src="../JS/renderer.js"></script>
         <script type="module" src="../JS/calendarForm.js"></script>
+        <script src="/errorCatcher.js"></script>
 
     </body>
 
