--- a/FrontEnd/ValedictorianFE/HTML/login_reg.html
+++ b/FrontEnd/ValedictorianFE/HTML/login_reg.html
@@ -61,5 +61,6 @@
             </div>
         </div>
         <script type="module" src="../JS/login_reg.js"></script>
+        <script src="/errorCatcher.js"></script>
     </body>
 </html>
