--- a/FrontEnd/ValedictorianFE/HTML/profile.html
+++ b/FrontEnd/ValedictorianFE/HTML/profile.html
@@ -133,5 +133,6 @@
         </div>
 
         <script type="module" src="../JS/profile.js"></script>
+        <script src="/errorCatcher.js"></script>
     </body>
 </html>
