Created messaging tab
Created a half functional messaging tab without backend connection as of yet.

--- a/FrontEnd/ValedictorianFE/HTML/Home.html
+++ b/FrontEnd/ValedictorianFE/HTML/Home.html
@@ -6,9 +6,11 @@
         <link rel="stylesheet" href="../CSS/home.css">
         <link rel="stylesheet" href= "../CSS/calendar.css">
         <link rel="stylesheet" href="../CSS/calendarForm.css">
-        <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+        <link rel="stylesheet" href="../CSS/messaging.css">
+        <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css ' rel='stylesheet'>
 
-    </head>
+    <base target="_blank">
+</head>
 
     <body>
 
@@ -102,6 +104,79 @@
 
         </section>
 
+        <!-- Messaging Section -->
+        <section class="mesBox">
+            <div class="messaging-container">
+                <!-- Left Sidebar - Chat List -->
+                <div class="chat-sidebar">
+                    <div class="sidebar-header">
+                        <h2>Chats</h2>
+                        <button class="new-chat-btn">
+                            <i class='bx bx-plus'></i>
+                        </button>
+                    </div>
+                    <div class="chat-search">
+                        <input type="text" placeholder="Search or start new chat" id="chatSearch">
+                        <i class='bx bx-search'></i>
+                    </div>
+                    <div class="chat-list" id="chatList">
+                        <!-- Chat items will be populated by JavaScript -->
+                    </div>
+                </div>
+
+                <!-- Main Chat Area -->
+                <div class="chat-main">
+                    <div class="chat-header" id="chatHeader">
+                        <div class="chat-header-info">
+                            <div class="avatar">
+                                <img src="../assets/images/default-avatar.png" alt="Avatar" id="currentChatAvatar">
+                            </div>
+                            <div class="chat-info">
+                                <h3 id="currentChatName">Select a chat</h3>
+                                <span id="currentChatStatus">No chat selected</span>
+                            </div>
+                        </div>
+                        <div class="chat-header-actions">
+                            <button class="search-btn">
+                                <i class='bx bx-search'></i>
+                            </button>
+                            <button class="menu-btn">
+                                <i class='bx bx-dots-vertical-rounded'></i>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="chat-messages" id="chatMessages">
+                        <div class="no-chat-selected">
+                            <div class="no-chat-icon">
+                                <i class='bx bx-message-square-detail'></i>
+                            </div>
+                            <h3>Welcome to Messages</h3>
+                            <p>Select a chat to start messaging</p>
+                        </div>
+                    </div>
+
+                    <div class="chat-input-container">
+                        <div class="chat-input">
+                            <button class="emoji-btn">
+                                <i class='bx bx-smile'></i>
+                            </button>
+                            <input type="text" placeholder="Type a message" id="messageInput" disabled>
+                            <button class="attach-btn">
+                                <i class='bx bx-paperclip'></i>
+                            </button>
+                            <button class="voice-btn">
+                                <i class='bx bx-microphone'></i>
+                            </button>
+                        </div>
+                        <button class="send-btn" id="sendButton" disabled>
+                            <i class='bx bx-send'></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section class="imageColumnContainer">
 
             <div class="imageColumn leftImageColumn">
@@ -182,6 +257,7 @@
         
         <script type="module" src="../JS/home.js"></script>
         <script src="../JS/calendar.js"></script>
+        <script src="../JS/messaging.js"></script>
         <script src="../JS/renderer.js"></script>
         <script type="module" src="../JS/calendarForm.js"></script>
         <script src="/errorCatcher.js"></script>
