--- a/FrontEnd/ValedictorianFE/HTML/contact.html
+++ b/FrontEnd/ValedictorianFE/HTML/contact.html
@@ -180,6 +180,10 @@
                 </div>
             </div>
         </footer>
+
+        <script>
+            (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="EikTFqQGFuY4aizTDzUOu";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+        </script>
         <script src="../JS/contact.js"></script>
     </body>
 </html>
