--- a/FrontEnd/ValedictorianFE/HTML/profile.html
+++ b/FrontEnd/ValedictorianFE/HTML/profile.html
@@ -132,7 +132,9 @@
             </div>
         </div>
 
+        <script>
+            (function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="EikTFqQGFuY4aizTDzUOu";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
+        </script>
         <script type="module" src="../JS/profile.js"></script>
-        <script src="/errorCatcher.js"></script>
     </body>
 </html>
