--- a/FrontEnd/ValedictorianFE/HTML/claritasLanding.html
+++ b/FrontEnd/ValedictorianFE/HTML/claritasLanding.html
@@ -22,9 +22,9 @@
                     <span class="nav-logo-text">Valedictorian</span>
                 </div>
                 <div class="nav-links md-visible">
-                    <a href="../HTML/Home.html" class="nav-link">Home</a>
-                    <a href="../HTML/contact.html" class="nav-link">Contact</a>
-                    <a href="../HTML/about.html" class="nav-link">About</a>
+                    <a href="../HTML/Home.html" class="nav-link" target="_self">Home</a>
+                    <a href="../HTML/contact.html" class="nav-link" target="_self">Contact</a>
+                    <a href="../HTML/about.html" class="nav-link" target="_self">About</a>
                 </div>
             </div>
         </div>
