--- a/FrontEnd/ValedictorianFE/HTML/module.html
+++ b/FrontEnd/ValedictorianFE/HTML/module.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="container">
+         <button onclick="window.location.href='../HTML/Home.html'" class="homeBtn">Home</button>
         <nav class="sidebar">
             <div class="menu-heading">MENU</div>
             <ul>
