Added calendar page
Added the calendar page and made changes to calendar and profile pages

--- a/FrontEnd/ValedictorianFE/HTML/claritasLanding.html
+++ b/FrontEnd/ValedictorianFE/HTML/claritasLanding.html
@@ -30,14 +30,13 @@
         </div>
     </nav>
 
-    <!-- Hero Section -->
     <section class="hero-section">
         <div class="container text-center">
             <h1 class="hero-title reveal-text">
-                Community <span class="highlight-text">Forums</span>
+                Clar<span class="highlight-text">itas</span>
             </h1>
             <p class="hero-description reveal-text">
-                Connect with fellow students, ask questions, share knowledge, and build our learning community together.
+                Claritas - Latin for clarity. Got some confusion? Get some clarity.
             </p>
             <div class="search-container reveal-text">
                 <div class="search-wrapper">
@@ -54,49 +53,17 @@
                     </div>
                 </div>
             </div>
-            <div class="stats-container reveal-text">
-                <div class="stat-item">
-                    <div class="stat-number">2,847</div>
-                    <div class="stat-label">Active Members</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-number">1,293</div>
-                    <div class="stat-label">Discussions</div>
-                </div>
-                <div class="stat-item">
-                    <div class="stat-number">8,456</div>
-                    <div class="stat-label">Posts</div>
-                </div>
-            </div>
         </div>
     </section>
 
-    <!-- Forum Categories -->
     <section class="forum-section">
         <div class="container">
-            <h2 class="section-title text-center reveal-text">Browse Categories</h2>
+            <h2 class="section-title text-center reveal-text">Browse Topics</h2>
             <div class="categories-grid" id="categories-grid">
             </div>
         </div>
     </section>
 
-    <section class="discussions-section">
-        <div class="container">
-            <div class="discussions-header reveal-text">
-                <h2 class="section-title">Recent Discussions</h2>
-                <button class="new-discussion-btn" onclick="openNewDiscussionModal()">
-                    <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-                    </svg>
-                    New Discussion
-                </button>
-            </div>
-            <div class="discussion-list" id="discussion-list">
-            </div>
-        </div>
-    </section>
-
-    <!-- Footer -->
     <footer class="footer">
         <div class="container text-center">
             <div class="footer-logo">
