--- a/FrontEnd/ValedictorianFE/HTML/Home.html
+++ b/FrontEnd/ValedictorianFE/HTML/Home.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="hero-buttons">
                         <a href="../HTML/moduleList.html" class="btn btn-primary" target="_self">Modules</a>
-                        <a href="#calendar" class="btn btn-secondary" target="_self">Calendar</a>
+                        <a href="../HTML/calendar.html" class="btn btn-secondary" target="_self">Calendar</a>
                     </div>
                 </div>
                 <div class="hero-image">
